# nfl_predict

./: .gitignore  Implementation_Plan.md  Mixture_of_Experts_plan.md  README.md  codex_meta_loop.py  codex_output.md  main.py  pyproject.toml  requirements.txt
.codex_meta_logs/: 20251126_012716_phase1or2_85951_last_message.txt  20251126_012716_phase1or2_85951_raw.txt  20251126_013403_phase1or2_85951_last_message.txt  20251126_013403_phase1or2_85951_raw.txt  20251126_013502_phase3or4orval_85951_last_message.txt  20251126_013502_phase3or4orval_85951_raw.txt  20251126_014936_phase3or4orval_85951_last_message.txt  20251126_014936_phase3or4orval_85951_raw.txt  20251126_020213_phase3or4orval_85951_last_message.txt  20251126_020213_phase3or4orval_85951_raw.txt  20251126_020424_phase3or4orval_85951_last_message.txt  20251126_020424_phase3or4orval_85951_raw.txt  20251126_020455_phase3or4orval_85951_last_message.txt  20251126_020455_phase3or4orval_85951_raw.txt  20251126_020550_phase3or4orval_85951_last_message.txt  20251126_020550_phase3or4orval_85951_raw.txt  20251126_020706_phase3or4orval_85951_last_message.txt  20251126_020706_phase3or4orval_85951_raw.txt  20251126_020742_phase3or4orval_85951_last_message.txt  20251126_020742_phase3or4orval_85951_raw.txt  20251126_020757_phase3or4orval_85951_raw.txt  20251126_020828_phase1or2_85951_raw.txt  20251126_020859_phase1or2_85951_raw.txt  20251126_020929_phase1or2_85951_raw.txt  20251126_021000_phase1or2_85951_raw.txt  20251126_021030_phase1or2_85951_raw.txt  20251126_021100_phase1or2_85951_raw.txt  (+513 more)
docs/: Rolling.md  clean.md  (+8 more)
(+201 files in other folders)
