[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nfl_predict"
version = "0.0.1"
authors = [
  { name="User", email="user@example.com" },
]
description = "NFL anytime-touchdown prediction stack (legacy MLB modules optional)"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
where = ["."] 